--- a/p/pr/pro/productsourcing.com.html
+++ b/p/pr/pro/productsourcing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the productsourcing.com privacy policy that was archived on 2015-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150529020620id_/http%3A//www.productsourcing.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the productsourcing.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605032632id_/http%3A//www.productsourcing.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -11,9 +11,9 @@
 
 	
 
-	<link rel="stylesheet" type="text/css" href="https://d20fl3mbde3m7j.cloudfront.net/style/productsourcing/global_v2.css">
-	<link rel="stylesheet" type="text/css" href="https://d20fl3mbde3m7j.cloudfront.net/style/productsourcing/print.css" media="print">
-	<script id="hs-analytics" src="//js.hs-analytics.net/analytics/1580385300000/472710.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/site/scripts/ss.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://d20fl3mbde3m7j.cloudfront.net/style/productsourcing/global_v2.css">
+	<link rel="stylesheet" type="text/css" href="http://d20fl3mbde3m7j.cloudfront.net/style/productsourcing/print.css" media="print">
+	<script id="hs-analytics" src="//js.hs-analytics.net/analytics/1580385300000/472710.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-MVM2JD"></script><script src="/site/scripts/ss.js"></script>
 
 	    <script language="javascript" type="text/javascript">
 	
@@ -25,18 +25,17 @@
 </head>
 
 <body id="body" class="logged_out">
+
 <!-- Google Tag Manager -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-1002835-3', 'auto');
-ga('send', 'pageview');
-
-</script>
-<!-- End Google Tag Manager --><div id="centered">
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MVM2JD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MVM2JD');</script>
+<!-- End Google Tag Manager -->
+<div id="centered">
 	<div id="main">
 		<div id="header_wrapper">
 			<div id="header">
@@ -126,7 +125,7 @@ ga('send', 'pageview');
 		<p>ProductSourcing.com takes every precaution to protect our users' information. When users submit sensitive information via the website, their information is protected both online and off-line.</p>
 		<p>When our registration/order form asks users to enter sensitive information (such as credit card number), that information is encrypted and is protected with the best encryption software in the industry - SSL. While on a secure page, such as our order form, the lock icon on the bottom of Web browsers such as Netscape Navigator and Microsoft Internet Explorer becomes locked, as opposed to un-locked, or open, when users are just "surfing."</p>
 		<p>While we use SSL encryption to protect sensitive information online, we also do everything in our power to protect user-information off-line. All of our users' information, not just the sensitive information mentioned above, is restricted in our offices. Only employees who need the information to perform a specific job (for example, our billing clerk or a customer service representative) are granted access to personally identifiable information. Furthermore, ALL employees are kept up-to-date on our security and privacy practices. Finally, the servers that store personally identifiable information are in a secure environment, behind a locked cage in a locked facility.</p>
-		<p>ProductSourcing.com reserves the right to make any amendments, modifications or changes to this Privacy Policy at any time.  If any material change is made to this Privacy Policy, we will notify our users about those changes via email.  If you do not agree to such changes, you can modify your notification settings to opt out of certain notices from ProductSourcing.com or its marketing partners.  If users have any questions about the security at our website, users can send an email to <a href="support@productsourcing.com">support@productsourcing.com</a>.</p>
+		<p>ProductSourcing.com reserves the right to make any amendments, modifications or changes to this Privacy Policy at any time.  If any material change is made to this Privacy Policy, we will notify our users about those changes via email.  If you do not agree to such changes, you can modify your notification settings to opt out of certain notices from ProductSourcing.com or its marketing partners.  If users have any questions about the security at our website, please <a href="/contact-us.html">contact us</a>.</p>
 
 		<h3 id="child_privacy">Our commitment to children's privacy</h3>
 		<p>Protecting the privacy of the very young is especially important. For that reason, we never collect or maintain information at our website from those we actually know are under 13, and no part of our website is structured to attract anyone under 13. In order to subscribe to ProductSourcing.com's services, the member must be 18.</p>
@@ -135,7 +134,7 @@ ga('send', 'pageview');
 		<p>You can access your personally identifiable information collected by ProductSourcing.com by logging into your account and visiting the "Account" section of the website. You can correct factual errors in your personally identifiable information by sending us a request that credibly shows error. To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections.</p>
 
 		<h3 id="contact">How to contact us</h3>
-		<p>Should you have other questions or concerns about these privacy policies, please send us an email at <a href="mailto:support@productsourcing.com">support@productsourcing.com</a>. Alternatively, you may contact us via phone at 866-417-3022.</p>
+		<p>Should you have other questions or concerns about these privacy policies, please <a href="/contact-us.html">contact us</a>.</p>
 		<div>&nbsp;</div>
 		<p style="font-size: 10px;">Last updated: July 21, 2011</p>
 	</div>
@@ -150,19 +149,15 @@ ga('send', 'pageview');
                 <li class="last"><a href="/sitemap.html">Site Map</a></li>
             </ul>
 			<div class="clear">&nbsp;</div>
-			<div id="copyright">© 2015 &nbsp; ProductSourcing.com<sup>™</sup></div>
+			<div id="copyright">© 2017 &nbsp; ProductSourcing.com<sup>™</sup></div>
 			<div id="footer_bg_right">&nbsp;</div>
 			<div id="footer_bg_left">&nbsp;</div>
 		</div>
 	</div>
 </div>
 
-<script type="text/javascript" src="https://px.steelhousemedia.com/st?aid=9201&amp;cb=7845161549527606"></script><script type="text/javascript">
-	// TRACKING PIXEL
-	var aid='9201';
-	var additional = ''; // add additional arguments here. please start off with '&'
-	(function(){steelhouse={add:function(a,b,c,d){d=d||false;if(a.addEventListener){a.addEventListener(b,c,d)}else if(a.attachEvent){a.attachEvent("on"+b,c)}},load:function(){var a;if(typeof a=='undefined'){a=Math.random()*10000000000000000}var b=document.createElement('script');var c='px.steelhousemedia.com/st?aid='+aid+'&cb='+a+additional;b.type='text/javascript';b.src=('https:'==document.location.protocol?'https://':'http://')+c;var d=document.getElementsByTagName('script');var e=Number(d.length)-1;var f=document.getElementsByTagName('script')[e];f.parentNode.insertBefore(b,f)}};steelhouse.load();})();
-</script>
+
+
 <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
     (function(d,s,i,r) {
