--- a/g/ga/gao/gao.gov.html
+++ b/g/ga/gao/gao.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gao.gov privacy policy that was archived on 2016-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161213145520id_/http%3A//gao.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gao.gov privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605062002id_/http%3A//www.gao.gov/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html style="height:100%"><head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,48 +8,33 @@
         if ( ( top.location.host !== self.location.host ) && ( top != self ) ) { top.location.href = location.href;}
     </script>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>U.S. GAO - Privacy, Legal, and Other Site Policies</title><meta name="Last-Modified" content="Tue, 21 Apr 2015 13:51:23 -0400">	<link rel="stylesheet" href="/inc/css/template.css?v1.04">
-	<link rel="stylesheet" href="/inc/css/header.css?v1.04">
-	<link rel="stylesheet" href="/inc/css/footer.css?v1.04">
-	<link rel="stylesheet" href="/inc/css/sub.css?v1.04">
-	<link rel="stylesheet" href="/inc/css/no_subnav.css?v1.04">
+<title>U.S. GAO - Privacy, Legal, and Other Site Policies</title><meta name="Last-Modified" content="Tue, 21 Apr 2015 13:51:23 -0400">	<link rel="stylesheet" href="//files.gao.gov/inc/css/template.css?v1.04">
+	<link rel="stylesheet" href="//files.gao.gov/inc/css/header.css?v1.04">
+	<link rel="stylesheet" href="//files.gao.gov/inc/css/footer.css?v1.04">
+	<link rel="stylesheet" href="//files.gao.gov/inc/css/sub.css?v1.04">
+	<link rel="stylesheet" href="//files.gao.gov/inc/css/no_subnav.css?v1.04">
 
 <meta property="og:title" content="Privacy, Legal, and Other Site Policies">
 <meta property="og:type" content="Website">
 <meta property="og:url" content="http://www.gao.gov/privacy.html">
-<meta property="og:image" content="http://www.gao.gov/img/gao_gov_icon.png">
-<link rel="apple-touch-icon-precomposed" href="http://www.gao.gov/img_library/apple-touch-icon.png">
-<!--[if lte IE 7]> <style type="text/css">@import "/inc/css/ie7.css";</style> <![endif]-->
-<!--[if lte IE 7]> <style type="text/css">@import "/inc/css/ie7_nosubnav.css";</style> <![endif]-->
+<meta property="og:image" content="//files.gao.gov/img/gao_gov_icon.png">
+<link rel="apple-touch-icon-precomposed" href="//files.gao.gov/img_library/apple-touch-icon.png">
+<!--[if lte IE 7]> <style type="text/css">@import "//files.gao.gov/inc/css/ie7.css";</style> <![endif]-->
+<!--[if lte IE 7]> <style type="text/css">@import "//files.gao.gov/inc/css/ie7_nosubnav.css";</style> <![endif]-->
 
-<link rel="stylesheet" type="text/css" href="/scripts/jquery/css/jquery-ui.min.css">
+<link rel="stylesheet" type="text/css" href="//files.gao.gov/scripts/jquery/css/jquery-ui.min.css">
 <script src="/scripts/libs/Ajaxer.js"></script>
 <script src="/scripts/check_foresee.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>	
-<script type="text/javascript">!window.jQuery && document.write(unescape("%3Cscript src='/scripts/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="/scripts/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">!window.jQuery && document.write(unescape("%3Cscript src='//files.gao.gov/scripts/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="//files.gao.gov/scripts/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-<script type="text/javascript">!window.jQuery.ui && document.write(unescape("%3Cscript src='/scripts/jquery/jquery-ui.min.js' type='text/javascript'%3E%3C/script%3E"));</script>
-<script type="text/javascript" src="/scripts/jquery/jquery-bg_scripts.js?v=1.08"></script>
-<script type="text/javascript" src="/scripts/core/script.js"></script><script type="text/javascript">	// Answers Cloud Services Embed Script v1.02
-	;(function (g) {
-		var d = document, i, am = d.createElement('script'), h = d.head || d.getElementsByTagName("head")[0],
-		aex = {
-			"src": "//gateway.answerscloud.com/gao-gov/production/gateway.min.js",
-			"type": "text/javascript",
-			"async": "true",
-			"data-vendor": "acs",
-			"data-role": "gateway"
-		};
-		for (var attr in aex) { am.setAttribute(attr,aex[attr]); }
-		h.appendChild(am);
-		g['acsReady'] = function () {var aT = '__acsReady__', args = Array.prototype.slice.call(arguments, 0),k = setInterval(function () {if (typeof g[aT] === 'function') {clearInterval(k);for (i = 0; i < args.length; i++) {g[aT].call(g, function(fn) { return function() { setTimeout(fn, 1) };}(args[i]));}}}, 50);};
-	})(window);
-	    
-</script><script src="//gateway.answerscloud.com/gao-gov/production/gateway.min.js" type="text/javascript" async="true" data-vendor="acs" data-role="gateway"></script></head><body><div id="dhtmlwindowholder"><span style="display:none">.</span></div>
-<!-- <script type="text/javascript" src="/scripts/core/script.js"></script> -->
-<!-- <script type="text/javascript" src="/scripts/scriptaculous/prototype.js"></script> -->
-<!-- <script language="JavaScript" src="/inc/js/foresee/triggerParams.js"></script> -->
-<!-- <script language="JavaScript" src="/inc/js/foresee/stdLauncher.js"></script> -->
+<script type="text/javascript">!window.jQuery.ui && document.write(unescape("%3Cscript src='//files.gao.gov/scripts/jquery/jquery-ui.min.js' type='text/javascript'%3E%3C/script%3E"));</script>
+<script type="text/javascript" src="//files.gao.gov/scripts/jquery/jquery-bg_scripts.js?v=1.08"></script>
+<script type="text/javascript" src="//files.gao.gov/scripts/core/script.js"></script>
+<!-- <script type="text/javascript" src="//files.gao.gov/scripts/core/script.js"></script> -->
+<!-- <script type="text/javascript" src="//files.gao.gov/scripts/scriptaculous/prototype.js"></script> -->
+<!-- <script language="JavaScript" src="//files.gao.gov/inc/js/foresee/triggerParams.js"></script> -->
+<!-- <script language="JavaScript" src="//files.gao.gov/inc/js/foresee/stdLauncher.js"></script> -->
 <!-- <script type="text/javascript" src="/docsearch/app_jsfuncs.js"></script> -->
 
 
@@ -191,15 +176,30 @@ jQuery(document).ready(function($) {
 	}
 	
 	#header #contact_gao {
-		background: url("/img_library/connect_email_small.png") no-repeat scroll 0 0 transparent;
+		background: url("//files.gao.gov/img_library/connect_email_small.png") no-repeat scroll 0 0 transparent;
 		padding-left: 20px;
 	}
 	
 </style>
 
 
-
- 
+<script type="text/javascript">	// Answers Cloud Services Embed Script v1.02
+	;(function (g) {
+		var d = document, i, am = d.createElement('script'), h = d.head || d.getElementsByTagName("head")[0],
+		aex = {
+			"src": "//gateway.answerscloud.com/gao-gov/production/gateway.min.js",
+			"type": "text/javascript",
+			"async": "true",
+			"data-vendor": "acs",
+			"data-role": "gateway"
+		};
+		for (var attr in aex) { am.setAttribute(attr,aex[attr]); }
+		h.appendChild(am);
+		g['acsReady'] = function () {var aT = '__acsReady__', args = Array.prototype.slice.call(arguments, 0),k = setInterval(function () {if (typeof g[aT] === 'function') {clearInterval(k);for (i = 0; i < args.length; i++) {g[aT].call(g, function(fn) { return function() { setTimeout(fn, 1) };}(args[i]));}}}, 50);};
+	})(window);
+	    
+</script><script src="//gateway.answerscloud.com/gao-gov/production/gateway.min.js" type="text/javascript" async="true" data-vendor="acs" data-role="gateway"></script></head>
+<body> 
 <div id="skip_nav_link" style="height:0px; margin-left:-1000px;"><a href="#skip_nav">Skip Navigation</a></div>
 <div id="super_container">
 <div id="header"><!-- <div class="column-in"> --><div id="headerInner"><div id="head_wrap"><!-- [BEGIN] Utility Bar --><!-- [END] Utility Bar -->
@@ -213,7 +213,7 @@ jQuery(document).ready(function($) {
  </form>
  <a style="clear:both;" href="/search?advanced=1">Advanced Search</a></div>
 <!-- [END] Search Form -->
-<h1><a href="/index.html" title="U.S. Government Accountability Office (GAO)" style="z-index:10;"><img src="/images/US-GAO-logo.png" id="gaologotext" itemprop="logo" height="49" width="485" border="0" alt="U.S. Government Accountability Office (GAO)"></a></h1></div><!-- [END] Head Wrap -->
+<h1><a href="/index.html" title="U.S. Government Accountability Office (GAO)" style="z-index:10;"><img src="//files.gao.gov/images/US-GAO-logo.png" id="gaologotext" itemprop="logo" height="49" width="485" border="0" alt="U.S. Government Accountability Office (GAO)"></a></h1></div><!-- [END] Head Wrap -->
 <!-- [BEGIN] Main Nav -->
 
 <div id="main_nav">
@@ -350,7 +350,7 @@ jQuery(document).ready(function($) {
          <li><a class="spritely footer_flickr" href="http://www.flickr.com/photos/usgao" target="blank"><span class="text_no_indent">Flickr</span></a></li>
          <li><a class="spritely footer_rss" href="/feeds.html"><span class="text_no_indent">RSS feeds</span></a></li>
          <li><a class="spritely footer_blog" href="http://blog.gao.gov"><span class="text_no_indent">Blog</span></a></li>
-         <li><a class="spritely footer_podcasts" href="http://www.gao.gov/podcast/watchdog.html"><span class="text_no_indent">Podcasts</span></a></li>
+         <li><a class="spritely footer_podcasts" href="/podcast/watchdog.html"><span class="text_no_indent">Podcasts</span></a></li>
          <li><a class="spritely footer_widgets" href="/widgets_reports_and_legal.html"><span class="text_no_indent">Widgets</span></a></li>
          <li><a class="spritely footer_email" href="/subscribe/index.php"><span class="text_no_indent">E-mail</span></a></li>
          <li><a class="spritely footer_stayconnected" href="/feeds.html"><span class="text_no_indent">Stay connected</span></a></li>
@@ -416,7 +416,7 @@ jQuery(document).ready(function($) {
          <div class="col">	
             <h4><a href="/careers/index.html">Careers</a></h4>
             <ul>
-               <li><a href="https://www.usajobs.gov/JobSearch/Search/GetResults?OrganizationID=LG00&amp;ApplicantEligibility=all">Current Job<br>Vacancies</a></li>
+               <li><a href="https://usajobs.gov/Search/?a=LG00&amp;k=gao&amp;p=1">Current Job<br>Vacancies</a></li>
                <li><a href="/careers/apply.html">Apply for Jobs</a></li>
                <li><a href="/careers/career.html">Career Paths</a></li>
                <li><a href="/careers/benefits.html">Benefits</a></li>
@@ -468,6 +468,7 @@ jQuery(document).ready(function($) {
    </div><!--footer_lower-->
 
 <!-- [END] Footer -->
-<script>var _gaq=[['_setAccount','UA-29643216-1'],['_setDomainName','gao.gov'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
+<!-- look for a flag set in summary_ereport.php: this_is_a_flag_for_google_analytics.inc -->
+<script>var _gaq=document.getElementById('this_is_a_flag_for_google_analytics.inc')?[['_setAccount','UA-29643216-1'],['_setDomainName','gao.gov'],['_trackPageview',location.pathname + '/fastfacts']]:[['_setAccount','UA-29643216-1'],['_setDomainName','gao.gov'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
 
 </div></body></html>
