--- a/t/th/the/thewiseagent.com.html
+++ b/t/th/the/thewiseagent.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thewiseagent.com privacy policy that was archived on 2016-11-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161106073514id_/http%3A//thewiseagent.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thewiseagent.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605174642id_/http%3A//www.thewiseagent.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <!-- META DATA -->
@@ -27,7 +27,7 @@
     <!-- GOOGLE WEB FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,300,800" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="secure/css/QapTcha.jquery.css" media="screen">
-    <script id="facebook-jssdk" src="//web.archive.org/web/20160407193008/http://connect.facebook.net/en_US/sdk.js"></script><script src="/secure/javascript/facebookutils.js"></script>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//web.archive.org/web/20160407193008/http://connect.facebook.net/en_US/sdk.js"></script><script src="/secure/javascript/facebookutils.js"></script>
     <script src="/secure/javascript/googleSignin.js"></script>
     <script src="https://apis.google.com/js/client:platform.js?onload=render" async="" defer=""></script>
 
@@ -268,7 +268,7 @@
 
 
 <div align="center" class="copy"><font size="1">©
-2002-2016 The Wise Agent L.L.C.</font>
+2002-2017 The Wise Agent L.L.C.</font>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -300,17 +300,29 @@ $(function(){
 // End of Zopim Live Chat Script
 </script>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-3967741-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- Previous --> 
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+// var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+// document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
 <script type="text/javascript">
-setTimeout(function(){
-	var pageTracker = _gat._getTracker("UA-3967741-1");
-	pageTracker._initData();
-	pageTracker._trackPageview();
-},1000);
+// setTimeout(function(){
+// 	var pageTracker = _gat._getTracker("UA-3967741-1");
+// 	pageTracker._initData();
+// 	pageTracker._trackPageview();
+// },1000);
 </script>
 
 
-</div></div></div><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tabindex="-1" src="https://staticxx.facebook.com/connect/xd_arbiter.php?version=42#channel=f2c2812fb3944e8&amp;origin=https%3A%2F%2Fweb.archive.org" style="border: none;"></iframe></div></div></div></body></html>
+</div></div></div><div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tabindex="-1" src="https://staticxx.facebook.com/connect/xd_arbiter.php?version=42#channel=febd6cb96017c4&amp;origin=https%3A%2F%2Fweb.archive.org" style="border: none;"></iframe></div></div></div></body></html>
